crates/mabo-build/tests/snapshots/compiler__compile@alias_basic.mabo.snap
---
source: crates/mabo-build/tests/compiler.rs
description: "/// Sample alias.\nalias Sample = u32;"
input_file: crates/mabo-parser/tests/inputs/alias_basic.mabo
---
#[allow(unused_imports)]
use ::mabo::buf::{Decode, Encode, Size};
/// Sample alias.
#[allow(dead_code, clippy::module_name_repetitions, clippy::option_option)]
pub type Sample = u32;

