crates/mabo-build/tests/snapshots/compiler__compile@enum_basic.mabo.snap
---
source: crates/mabo-build/tests/compiler.rs
description: "/// Sample enum.\nenum Sample {\n    One @1,\n    /// Second variant\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        /// Second field of third variant\n        field2: bool @2,\n    } @3,\n}"
input_file: crates/mabo-parser/tests/inputs/enum_basic.mabo
---
#[allow(unused_imports)]
use ::mabo::buf::{Decode, Encode, Size};
/// Sample enum.
#[derive(Clone, Debug, PartialEq)]
#[allow(dead_code, clippy::module_name_repetitions, clippy::option_option)]
pub enum Sample {
    One,
    /// Second variant
    Two(u32, u64),
    Three {
        field1: u32,
        /// Second field of third variant
        field2: bool,
    },
}
#[automatically_derived]
impl ::mabo::Encode for Sample {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::deref_addrof,
        clippy::semicolon_if_nothing_returned,
        clippy::too_many_lines,
    )]
    fn encode(&self, w: &mut impl ::mabo::BufMut) {
        match self {
            Self::One => {
                ::mabo::buf::encode_variant_id(w, ::mabo::VariantId::new(1));
            }
            Self::Two(n0, n1) => {
                ::mabo::buf::encode_variant_id(w, ::mabo::VariantId::new(2));
                ::mabo::buf::encode_field(
                    w,
                    ::mabo::FieldId::new(1, ::mabo::FieldEncoding::Varint),
                    |w| {
                        ::mabo::buf::encode_u32(w, *n0);
                    },
                );
                ::mabo::buf::encode_field(
                    w,
                    ::mabo::FieldId::new(2, ::mabo::FieldEncoding::Varint),
                    |w| {
                        ::mabo::buf::encode_u64(w, *n1);
                    },
                );
                ::mabo::buf::encode_u32(w, ::mabo::buf::END_MARKER);
            }
            Self::Three { field1, field2 } => {
                ::mabo::buf::encode_variant_id(w, ::mabo::VariantId::new(3));
                ::mabo::buf::encode_field(
                    w,
                    ::mabo::FieldId::new(1, ::mabo::FieldEncoding::Varint),
                    |w| {
                        ::mabo::buf::encode_u32(w, *field1);
                    },
                );
                ::mabo::buf::encode_field(
                    w,
                    ::mabo::FieldId::new(2, ::mabo::FieldEncoding::Fixed1),
                    |w| {
                        ::mabo::buf::encode_bool(w, *field2);
                    },
                );
                ::mabo::buf::encode_u32(w, ::mabo::buf::END_MARKER);
            }
        }
    }
}
#[automatically_derived]
impl ::mabo::Decode for Sample {
    #[allow(clippy::too_many_lines)]
    fn decode(r: &mut impl ::mabo::Buf) -> ::mabo::buf::Result<Self> {
        match ::mabo::buf::decode_variant_id(r)?.value {
            1 => Ok(Self::One),
            2 => {
                let mut n0: Option<u32> = None;
                let mut n1: Option<u64> = None;
                loop {
                    let id = ::mabo::buf::decode_id(r)?;
                    match id.value {
                        ::mabo::buf::END_MARKER => break,
                        1 => n0 = Some(::mabo::buf::decode_u32(r)?),
                        2 => n1 = Some(::mabo::buf::decode_u64(r)?),
                        _ => ::mabo::buf::decode_skip(r, id.encoding)?,
                    }
                }
                Ok(
                    Self::Two(
                        n0
                            .ok_or(::mabo::buf::Error::MissingField {
                                id: 1,
                                name: None,
                            })?,
                        n1
                            .ok_or(::mabo::buf::Error::MissingField {
                                id: 2,
                                name: None,
                            })?,
                    ),
                )
            }
            3 => {
                let mut field1: Option<u32> = None;
                let mut field2: Option<bool> = None;
                loop {
                    let id = ::mabo::buf::decode_id(r)?;
                    match id.value {
                        ::mabo::buf::END_MARKER => break,
                        1 => field1 = Some(::mabo::buf::decode_u32(r)?),
                        2 => field2 = Some(::mabo::buf::decode_bool(r)?),
                        _ => ::mabo::buf::decode_skip(r, id.encoding)?,
                    }
                }
                Ok(Self::Three {
                    field1: field1
                        .ok_or(::mabo::buf::Error::MissingField {
                            id: 1,
                            name: Some("field1"),
                        })?,
                    field2: field2
                        .ok_or(::mabo::buf::Error::MissingField {
                            id: 2,
                            name: Some("field2"),
                        })?,
                })
            }
            id => Err(::mabo::buf::Error::UnknownVariant(id)),
        }
    }
}
#[automatically_derived]
impl ::mabo::buf::Size for Sample {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::deref_addrof,
        clippy::semicolon_if_nothing_returned,
        clippy::too_many_lines,
    )]
    fn size(&self) -> usize {
        match self {
            Self::One => ::mabo::buf::size_variant_id(1),
            Self::Two(n0, n1) => {
                ::mabo::buf::size_variant_id(2)
                    + ::mabo::buf::size_field(1, || { ::mabo::buf::size_u32(*n0) })
                    + ::mabo::buf::size_field(2, || { ::mabo::buf::size_u64(*n1) })
                    + ::mabo::buf::END_MARKER_SIZE
            }
            Self::Three { field1, field2 } => {
                ::mabo::buf::size_variant_id(3)
                    + ::mabo::buf::size_field(1, || { ::mabo::buf::size_u32(*field1) })
                    + ::mabo::buf::size_field(2, || { ::mabo::buf::size_bool(*field2) })
                    + ::mabo::buf::END_MARKER_SIZE
            }
        }
    }
}
